--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -998,19 +998,19 @@
   "constraints.required.version": "La version est requise",
   "constraints.required.content": "Le contenu est requis",
   "constraints.required.file": "Le fichier est requis",
-  "constraints.required.otoroshi.settings": "les paramètre Otoroshi sont requis",
+  "constraints.required.otoroshi.settings": "les paramètres Otoroshi sont requis",
   "constraints.required.authorizedEntities": "les entitées autorisées sont requise",
   "constraints.required.value": "la valeure est requise",
-  "constraints.required.domain": "Le nom de domaine is requis",
+  "constraints.required.domain": "Le nom de domaine est requis",
   "constraints.format.url": "%s doit être une URL valide",
-  "constraints.matches.email": "Votre courriel doit être une addresse électronique valide",
+  "constraints.matches.email": "Votre courriel doit être une adresse électronique valide",
   "constraint.matches.password": "Votre mot de passe doit avoir 8 lettres min. et contenir au moins une lettre capitale, un nombre et un caractère spécial (#$^+=!*()@%&).",
   "constraint.oneof.confirm.password": "La confirmation du mot de passe doit être identique au mot de passe",
   "constraints.reserved.char.version": "Certains caractères sont reservés pour la version (%s)",
   "constraints.file.type.forbidden": "Le type du fichier est interdit",
   "constraints.file.type.required": "Le content-type du fichier est requis",
-  "constraint.min.authorizedEntities": "Les entitées autorisées doivent contenire au minimum une service ou un groupe",
-  "constraint.test.required.variables": "la valeurs doit contenir les variables requises",
+  "constraint.min.authorizedEntities": "Les entitées autorisées doivent contenir au minimum une service ou un groupe",
+  "constraint.test.required.variables": "la valeur doit contenir les variables requises",
   "SEO": "SEO",
   "Robot.txt.label": "Contenu du fichier robots.txt",
   "Robot.txt.content": "Le contenu du fichier robots.txt servi par Daikoku",
@@ -1025,12 +1025,12 @@
   "Subscription.manual.help": "valeur obligatoire en raison de la configuration des métadonnées personnalisées",
   "constraints.required.type": "Le type est requis",
   "constraints.oneof.plan.type": "Merci de sélectionner un type de plan correct",
-  "constraints.positive": "La valeur doit être posittive",
+  "constraints.positive": "La valeur doit être positive",
   "constraints.integer": "La valeur doit être un entier",
-  "constraints.required.billing.period": "La periode de facturation est requise",
-  "constraints.oneof.period": "Merci de sélectionner une unité de periode correct (Heures, Jours, Mois ou Années)",
-  "constraints.oneof.sub.process": "Merci de sélectionner une valeur correct pour le processus de souscription (Automatique or Manuel)",
-  "constraints.oneof.integration.process": "Merci de sélectionner une valeur correct pour le processus d'intégration (Automatique or Clef d'API)",
+  "constraints.required.billing.period": "La période de facturation est requise",
+  "constraints.oneof.period": "Merci de sélectionner une unité de période correct (Heures, Jours, Mois ou Années)",
+  "constraints.oneof.sub.process": "Merci de sélectionner une valeur correcte pour le processus de souscription (Automatique ou Manuel)",
+  "constraints.oneof.integration.process": "Merci de sélectionner une valeur correcte pour le processus d'intégration (Automatique ou Clé d'API)",
   "constraints.required.period.unit": "L'unité de periode est requise",
   "constraint.match.path": "La valeur doit être un chemin valide",
   "Edit plan": "Modifier le plan",
@@ -1084,42 +1084,42 @@
   "cms.content_side_view.links": "Insérer un lien vers le back office",
   "cms.content_side_view.pages": "Insérer un lien vers une page cms",
   "cms.content_side_view.blocks": "Bloc à rendre",
-  "cms.content_side_view.daikoku-user": "Récupére les informations d'un utilisateur (name, email et picture)",
-  "cms.content_side_view.daikoku-owned-apis": "Récupére les apis de l'utilisateur connecté",
-  "cms.content_side_view.daikoku-owned-api": "Récupére une api de l'utilisateur connecté",
-  "cms.content_side_view.daikoku-json-owned-apis": "Récupére les apis de l'utilisateur connecté (format JSON)",
-  "cms.content_side_view.daikoku-json-owned-api": "Récupére une api de l'utilisateur connecté (format JSON)",
-  "cms.content_side_view.daikoku-owned-teams": "Récupére les équipes de l'utilisateur connecté",
-  "cms.content_side_view.daikoku-owned-team": "Récupére une équipe de l'utilisateur connecté",
-  "cms.content_side_view.daikoku-json-owned-teams": "Récupére les équipes de l'utilisateur connecté (format JSON)",
-  "cms.content_side_view.daikoku-json-owned-team": "Récupére une équipe de l'utilisateur connecté (format JSON)",
-  "cms.content_side_view.tenant": "Récupére les informations du tenant",
+  "cms.content_side_view.daikoku-user": "Récupère les informations d'un utilisateur (name, email et picture)",
+  "cms.content_side_view.daikoku-owned-apis": "Récupère les apis de l'utilisateur connecté",
+  "cms.content_side_view.daikoku-owned-api": "Récupère une api de l'utilisateur connecté",
+  "cms.content_side_view.daikoku-json-owned-apis": "Récupère les apis de l'utilisateur connecté (format JSON)",
+  "cms.content_side_view.daikoku-json-owned-api": "Récupère une api de l'utilisateur connecté (format JSON)",
+  "cms.content_side_view.daikoku-owned-teams": "Récupère les équipes de l'utilisateur connecté",
+  "cms.content_side_view.daikoku-owned-team": "Récupère une équipe de l'utilisateur connecté",
+  "cms.content_side_view.daikoku-json-owned-teams": "Récupère les équipes de l'utilisateur connecté (format JSON)",
+  "cms.content_side_view.daikoku-json-owned-team": "Récupère une équipe de l'utilisateur connecté (format JSON)",
+  "cms.content_side_view.tenant": "Récupère les informations du tenant",
   "cms.content_side_view.is_admin": "Indique si l'utilisateur connecté est un administrateur du tenant ou non",
   "cms.content_side_view.connected": "Indique si l'utilisateur est connecté",
-  "cms.content_side_view.user": "Récupére, si connecté, les informations de l'utilisateur",
-  "cms.content_side_view.request": "Récupére le chemin, la méthode et les entêtes de la requête",
-  "cms.content_side_view.daikoku-css": "Récupére le lien vers la feuille de style de Daikoku",
+  "cms.content_side_view.user": "Récupère, si connecté, les informations de l'utilisateur",
+  "cms.content_side_view.request": "Récupère le chemin, la méthode et les entêtes de la requête",
+  "cms.content_side_view.daikoku-css": "Récupère le lien vers la feuille de style de Daikoku",
   "cms.content_side_view.for": "Itére sur une variable de type tableau passé en paramètre",
-  "cms.content_side_view.size": "Récupére la longueur de la variable",
+  "cms.content_side_view.size": "Récupère la longueur de la variable",
   "cms.content_side_view.ifeq": "S'assure que la variable est égale à la valeur souhaitée",
   "cms.content_side_view.ifnoteq": "S'assure que la variable n'est pas égale à la valeur souhaitée",
-  "cms.content_side_view.getOrElse": "Evalue la valeur de la variable et retourne l'alternative de la valeur si elle est non définie",
+  "cms.content_side_view.getOrElse": "Évalue la valeur de la variable et retourne l'alternative de la valeur si elle est non définie",
   "cms.content_side_view.translate": "Traduit une variable en utilisant les traduction de Daikoku",
-  "cms.content_side_view.daikoku-path-param": "Récupére le n-ième path param",
-  "cms.content_side_view.daikoku-query-param": "Récupére le query param avec le nom passé en paramètre",
-  "cms.content_side_view.daikoku-template-wrapper": "Affiche un block englobant un contenu enfant (avec ID)",
-  "cms.content_side_view.daikoku-apis": "Récupére toutes les APIs",
-  "cms.content_side_view.daikoku-api": "Récupére une API spécifique",
-  "cms.content_side_view.daikoku-json-apis": "Récupére toutes les APIs au format JSON",
-  "cms.content_side_view.daikoku-json-api": "Récupére une API au format JSON",
-  "cms.content_side_view.daikoku-teams": "Récupére toutes les APIs",
-  "cms.content_side_view.daikoku-team": "Récupére une équipe",
-  "cms.content_side_view.daikoku-json-teams": "Récupére toutes les équipes au format JSON",
-  "cms.content_side_view.daikoku-json-team": "Récupére une équipe au format JSON",
-  "cms.content_side_view.daikoku-documentations": "Récupére toutes les pages de documentations d'une API",
-  "cms.content_side_view.daikoku-documentations-page": "Récupére la n-ième page de documentation d'une api souhaitée",
-  "cms.content_side_view.daikoku-documentations-page-id": "Récupére la page de documentation d'une api souhaitée (via Id)",
-  "cms.content_side_view.daikoku-plans": "Récupére les plans d'une API",
+  "cms.content_side_view.daikoku-path-param": "Récupère le énième path param",
+  "cms.content_side_view.daikoku-query-param": "Récupère le query param avec le nom passé en paramètre",
+  "cms.content_side_view.daikoku-template-wrapper": "Affiche un bloc englobant un contenu enfant (avec ID)",
+  "cms.content_side_view.daikoku-apis": "Récupère toutes les APIs",
+  "cms.content_side_view.daikoku-api": "Récupère une API spécifique",
+  "cms.content_side_view.daikoku-json-apis": "Récupère toutes les APIs au format JSON",
+  "cms.content_side_view.daikoku-json-api": "Récupère une API au format JSON",
+  "cms.content_side_view.daikoku-teams": "Récupère toutes les APIs",
+  "cms.content_side_view.daikoku-team": "Récupère une équipe",
+  "cms.content_side_view.daikoku-json-teams": "Récupère toutes les équipes au format JSON",
+  "cms.content_side_view.daikoku-json-team": "Récupère une équipe au format JSON",
+  "cms.content_side_view.daikoku-documentations": "Récupère toutes les pages de documentation d'une API",
+  "cms.content_side_view.daikoku-documentations-page": "Récupère la énième page de documentation d'une api souhaitée",
+  "cms.content_side_view.daikoku-documentations-page-id": "Récupère la page de documentation d'une api souhaitée (via Id)",
+  "cms.content_side_view.daikoku-plans": "Récupère les plans d'une API",
   "cms.content_side_view.search_text": "Tapez le nom de la directive",
   "cms.body.drag_and_drop_advice": "Dépose un fichier dans l'éditeur pour importer le contenu directement",
   "cms.index.new_page": "Nouvelle page",
@@ -1135,13 +1135,13 @@
   "cms.revisions.restore": "Restaurer cette version",
   "cms.revisions.delete_sentence": "Êtes-vous sûr de vouloir restaurer cette version ?",
   "cms.revisions.version_history": "Historique",
-  "updated password can't be saved": "Le mots de passe n'a pu être mis à jour.",
-  "incorrect password": "Mots de passe incorrect",
+  "updated password can't be saved": "Le mot de passe n'a pu être mis à jour.",
+  "incorrect password": "Mot de passe incorrect",
   "Edit API": "Modifier l'API",
   "create": "Créer",
   "search.placeholder": "Rechercher une API, équipe, etc...",
   "incorrect.email.or.password": "Adresse e-mail et/ou mot de passe incorrects",
-  "transfer.api.ownership.title": "Transfère de propriété",
+  "transfer.api.ownership.title": "Transfert de propriété",
   "transfer.api.ownership.description": "Transférer l'API à une autre équipe",
   "Transfer": "Transférer",
   "delete.api.title": "Supprimer l'API",
@@ -1153,7 +1153,7 @@
   "Basic.informations": "Informations de base",
   "Tags and categories": "Tags et catégories",
   "Consumptions": "Consommations",
-  "team.transfer.notified": "L'équipe a été notifiée. merci d'attendre l'acceptation",
+  "team.transfer.notified": "L'équipe a été notifiée, merci d'attendre l'acceptation",
   "new.owner": "Nouvelle équipe",
   "type.api.name.confirmation": "Veuillez saisir %s pour confirmer",
   "constraints.required.team": "L'équipe est requise",
@@ -1165,19 +1165,19 @@
   "doc.page.save.success": "La page de documentation a été sauvegardée avec succès",
   "File": "File",
   "asset.update.successful": "L'asset a été modifié avec succès",
-  "asset.update": "Mise àjour d'un asset",
+  "asset.update": "Mise à jour d'un asset",
   "Translation": "Traduction",
   "Default mail template": "Modèle de courriel par défaut",
   "Translate": "Traduire",
   "Insert URL": "Insérer l'URL",
-  "custom.metadata.process.change.to.manual": "L'ajout de metadonnée personnalisée a été modifié le process de souscription en manuel",
+  "custom.metadata.process.change.to.manual": "L'ajout de métadonnée personnalisée a forcé le process de souscription en manuel",
   "subscription security": "Sécurité - souscription",
-  "subscription.security.help": "Si activé, les équipe personnelle ne seront plus authorisée à souscrire à une API",
+  "subscription.security.help": "Si activé, les équipes personnelles ne seront plus autorisées à souscrire à une API",
   "API reference visibility": "Sécurité - visibilité du swagger",
-  "api.reference.visibility.help": "Si activé, les utilisateurs non connectés ne pourront pas voir le swagger sur les API publique",
+  "api.reference.visibility.help": "Si activé, les utilisateurs non connectés ne pourront pas voir le swagger sur les API publiques",
   "Hide teams page": "Disponibilité de la page des équipes",
-  "hide.teams.page.help": "Si activé, les chemin /teams ne sera plus accessible",
-  "General": "General",
+  "hide.teams.page.help": "Si activé, les chemins/teams ne seront plus accessibles",
+  "General": "Général",
   "Customization": "Personnalisation",
   "Mail": "Courriel",
   "alerting.help": "Liste des courriels qui recevront les alertes Daikoku",
@@ -1186,7 +1186,7 @@
   "doc.page.update.modal.title": "Modification d'une page de documentation",
   "doc.page.create.modal.title": "Création d'une page de documentation",
   "doc.page.save.successfull": "La page a été sauvegardée avec succès",
-  "doc.page.import.successfull": "La page a été iportée avec succès",
+  "doc.page.import.successfull": "La page a été importée avec succès",
   "doc.page.move.successfull": "La page a été déplacée avec succès",
   "doc.page.deletion.successfull": "La page a été supprimée avec succès",
   "doc.page.update.successfull": "La page a été modifiée avec succès",
@@ -1198,8 +1198,8 @@
   "motivations.modal.title": "Dites-nous pourquoi vous voulez une clé d'API",
   "Daily quotas consumed": "Quotas journaliers consommés",
   "Monthly quotas consumed": "Quotas mensuels consommés",
-  "daily.quotas.consumed.title": "%s appels quotidiens consommés sur %s",
-  "monthly.quotas.consumed.title": "%s appels mensuels consommés sur %s",
+  "daily.quotas.consumed.title": "%s appels quotidien consommés sur %s",
+  "monthly.quotas.consumed.title": "%s appels mensuel consommés sur %s",
   "Quotas consumptions": "Consommation des quotas",
   "Event.details.modal.title": "Détail de l'évènement",
   "modal.session.expire.title": "Votre session est expirée",
@@ -1217,7 +1217,7 @@
   "fastMode.input.research.api": "Chercher votre API...",
   "fastMode.input.research.plan": "Chercher votre plan...",
   "fastMode.subscription.resume": "résumé de votre demande de souscription",
-  "fastMode.show.information": "Aucun plan ou clé d'API selectionné",
+  "fastMode.show.information": "Aucun plan ou clé d'API sélectionné",
   "fastMode.reasonSubscription.title": "Message par défaut",
   "fastMode.button.seeApiKey": {
     "s": "Voir la clé d'API",
@@ -1226,9 +1226,9 @@
   "fastMode.button.pending": "En attente",
   "fastMode.button.show.subs.apis": "Voir les APIs souscrites",
   "fastMode.button.show.all.apis": "Voir toutes les APIs",
-  "fastMode.selected.team.title": "Équipe sélectionée",
+  "fastMode.selected.team.title": "Équipe sélectionnée",
   "fastMode.token.label": "Jeton",
-  "fastMode.help.text.1": "Le mode rapide vous offre un accès simplifié à toutes les API accessible par une équipe.",
+  "fastMode.help.text.1": "Le mode rapide vous offre un accès simplifié à toutes les API accessibles par une équipe.",
   "fastMode.help.text.2": "Les informations affichées sont succinctes afin de faciliter la récupération de clé d'API.",
   "fastMode.help.text.3": "Pour utiliser cette fonctionnalité, sélectionnez d'abord votre équipe.",
   "Yes": "Oui",
@@ -1243,7 +1243,7 @@
   "set.js": "un fichier JS",
   "set.favicon": "le favicon",
   "set.font.family": "la police de style",
-  "select.team.placeholder": "Selectionner une équipe",
+  "select.team.placeholder": "Sélectionner une équipe",
   "otoroshi.missing.target": "Cible Otoroshi manquante",
   "otoroshi.missing.entities": "entités Otoroshi manquantes"
 }
