Update fastMode UI

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1212,8 +1212,8 @@
     "fastMode.title.chooseTeam": "Choose a team to start",
     "fastMode.error.searching.team": "An error has occurred while searching your teams",
     "fastMode.input.reasonSubscription": "Fill with the default reason for your API subscription request",
-    "fastMode.input.research.api": "Search your API...",
-    "fastMode.input.research.plan": "Search your plan...",
+    "fastMode.input.research.api": "Search an API",
+    "fastMode.input.research.plan": "Filter plans",
     "fastMode.subscription.resume": "summary of your subscription request",
     "fastMode.show.information": "no plan or API Key selected",
     "fastMode.reasonSubscription.title": "Default message",
