--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1214,8 +1214,8 @@
   "fastMode.title.chooseTeam": "Choisir une team pour commencer",
   "fastMode.error.searching.team": "Une erreur s'est produite lors de la recherche de vos équipes",
   "fastMode.input.reasonSubscription":"Renseigner le motif par défaut de votre demande de souscription",
-  "fastMode.input.research.api": "Chercher votre API...",
-  "fastMode.input.research.plan": "Chercher votre plan...",
+  "fastMode.input.research.api": "Chercher une API",
+  "fastMode.input.research.plan": "Filtrer les plans",
   "fastMode.subscription.resume": "résumé de votre demande de souscription",
   "fastMode.show.information": "Aucun plan ou clé d'API selectionné",
   "fastMode.reasonSubscription.title": "Message par défaut",
