--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -30,7 +30,7 @@
     "Daikoku description end": "companion to manage, document, and expose your beloved APIs to your developers community. Publish a new API in a few seconds",
     "result": "result",
     "matching": "matching",
-    "categorised in": "categorised in",
+    "categorised in": "categorized in",
     "tagged": "tagged",
     "clear filter": "clear filter",
     "Search your API...": "Search your API...",
@@ -280,8 +280,8 @@
     "tenant_edit.home_page": "Home page",
     "tenant_edit.404_page": "404 page",
     "tenant_edit.authenticated_cmspage": "Authenticated page",
-    "tenant_edit.authenticated_cmspage_help": "Display when an unlogged user navigates to a page with authentification",
-    "tenant_edit.cache_help": "During this time, the cms pages will be not re-rendered. Can improve the SEO and performances.",
+    "tenant_edit.authenticated_cmspage_help": "Display when an unlogged user navigates to a page with authentication",
+    "tenant_edit.cache_help": "During this time, the cms pages will not be re-rendered. Can improve the SEO and performances.",
     "tenant_edit.cache": "Time to live of the cache (ms)",
     "tenant_edit.cms_history_length": "History length",
     "tenant_edit.cms_history_length.help": "The number of revisions kept in the database.",
@@ -575,9 +575,9 @@
     "Otoroshi Host": "Otoroshi Host",
     "Otoroshi client id": "Otoroshi client id",
     "Otoroshi client secret": "Otoroshi client secret",
-    "otoroshi.settings.delete.confirm": "Are you sure you want to delete those otoroshi settings?",
+    "otoroshi.settings.delete.confirm": "Are you sure you want to delete those Otoroshi settings?",
     "Otoroshi settings": "Otoroshi settings",
-    "New otoroshi settings": "New otoroshi settings",
+    "New otoroshi settings": "New Otoroshi settings",
     "Host": "Host",
     "Edit this settings": "Edit this settings",
     "Delete this settings": "Delete this settings",
@@ -872,7 +872,7 @@
     "issues.timeline.comment_content.error": "Missing content of comment",
     "issues.confirm_delete": "Are you sure to delete this issue?",
     "issues.comments.confirm_delete": "Are you sure to delete this comment?",
-    "issues.on_error": "An error occured",
+    "issues.on_error": "An error occurred",
     "issues.on_missing_comment_content": "A content is mandatory to publish a new comment",
     "issues.opened_message": "opened this issue on",
     "issues.comments": "comments",
@@ -889,7 +889,7 @@
     "issues.by": "by",
     "issues.closed_on": "was closed on",
     "issues.nothing_matching_filter": "No issues matching filter",
-    "issues.apiVersion": "Version of api concerned",
+    "issues.apiVersion": "Version of API concerned",
     "star": "Star",
     "unstar": "Unstar",
     "Edit": "Edit",
@@ -921,14 +921,14 @@
     "Authorized entities": "Authorized entities",
     "Authorized.entities.placeholder": "Select Otoroshi service groups and/or services",
     "teamapi.new_version": "New version",
-    "authorized.entities.help": "Select otoroshi service groups and/or services on which the key is authorized",
+    "authorized.entities.help": "Select Otoroshi service groups and/or services on which the key is authorized",
     "apikey_select_modal.title": "Get an API key",
     "apikey_select_modal.select_your_api_key": "Select your API key to extend",
     "team_apikey_for_api.show_aggregate_sub": "Show aggregate subscriptions",
     "team_apikey_for_api.hide_aggregate_sub": "Hide subscriptions",
     "aggregation api keys security": "Aggregation API keys security",
     "aggregation_apikeys.security.help": "Enable the possibility to use an API key on multiple APIs",
-    "aggregation.api_key.security.notification": "You're enabled the aggregation of API keys. It's an advanced usage of the API keys. Keep in mind that the metadatas and the quotas will be shared between the parent API key and his aggregate API keys. Daikoku will not apply any control when conflict metadata.",
+    "aggregation.api_key.security.notification": "You're enabled the aggregation of API keys. It's an advanced usage of the API keys. Keep in mind that the metadata and the quotas will be shared between the parent API key and his aggregate API keys. Daikoku will not apply any control when conflict metadata.",
     "disabled.due.to.aggregation.security": "disabled due to enabling of aggregation security",
     "I understood": "I understood",
     "team_apikey_for_api.make_unique": "Make unique",
@@ -945,12 +945,12 @@
     "mail.contact.sender": "Resume of contact mail",
     "mail.contact.contact": "Somebody send you a contact request",
     "mail.apikey.rotation.title": "Your API key have been updated",
-    "mail.apikey.rotation.body": "Your API key for api [apiName] and plan [planName] have been rotated.",
+    "mail.apikey.rotation.body": "Your API key for API [apiName] and plan [planName] have been rotated.",
     "mail.apikey.refresh.title": "Your API key have been updated",
     "mail.apikey.refresh.body": "Your API key for API [apiName] and plan [planName] have been updated.",
     "mail.apikey.demand.title": "Somebody want an API key",
     "mail.apikey.demand.body": "[user] want an API key for [apiName].",
-    "mail.api.access.title": "Somebody want to access your api",
+    "mail.api.access.title": "Somebody want to access your API",
     "mail.api.access.body": "[user] want to join your team [teamName].",
     "mail.team.access.title": "Somebody want to join your team",
     "mail.team.access.body": "[user] want to join your team [teamName].",
@@ -1061,41 +1061,41 @@
     "cms.content_side_view.pages": "Insert a link to a cms page",
     "cms.content_side_view.blocks": "Render a block",
     "cms.content_side_view.daikoku-user": "Get user information (name, email and picture)",
-    "cms.content_side_view.daikoku-owned-apis": "Get owned apis",
-    "cms.content_side_view.daikoku-owned-api": "Get owned api",
-    "cms.content_side_view.daikoku-json-owned-apis": "Get owned apis as stringified JSON format",
-    "cms.content_side_view.daikoku-json-owned-api": "Get owned api as stringified JSON format",
+    "cms.content_side_view.daikoku-owned-apis": "Get owned APIs",
+    "cms.content_side_view.daikoku-owned-api": "Get owned API",
+    "cms.content_side_view.daikoku-json-owned-apis": "Get owned APIs as stringified JSON format",
+    "cms.content_side_view.daikoku-json-owned-api": "Get owned API as stringified JSON format",
     "cms.content_side_view.daikoku-owned-teams": "Get owned teams",
     "cms.content_side_view.daikoku-owned-team": "Get owned team",
-    "cms.content_side_view.daikoku-json-owned-teams": "Get owned apis as stringified JSON format",
+    "cms.content_side_view.daikoku-json-owned-teams": "Get owned APIs as stringified JSON format",
     "cms.content_side_view.daikoku-json-owned-team": "Get owned team as stringified JSON format",
     "cms.content_side_view.tenant": "Get informations about the tenant",
     "cms.content_side_view.is_admin": "Retrieves if the current user is an tenant administrator",
     "cms.content_side_view.connected": "Retrieves if the current user is connected",
     "cms.content_side_view.user": "If the user is connected, retrieve his informations",
     "cms.content_side_view.request": "Get path, method and headers of the request",
-    "cms.content_side_view.daikoku-css": "Get the link to the daikoku stylesheet",
+    "cms.content_side_view.daikoku-css": "Get the link to the Daikoku stylesheet",
     "cms.content_side_view.for": "Iterates on an array field",
     "cms.content_side_view.size": "Get the length of the variable",
     "cms.content_side_view.ifeq": "Checks if the variable if equals to the value",
     "cms.content_side_view.ifnoteq": "Checks if the variable if not equals to the value",
     "cms.content_side_view.getOrElse": "Evaluates the value of the variable and return us the alternative value if the value is empty",
-    "cms.content_side_view.translate": "Translates the variable using daikoku translations",
+    "cms.content_side_view.translate": "Translates the variable using Daikoku translations",
     "cms.content_side_view.daikoku-path-param": "Get the nth path params",
     "cms.content_side_view.daikoku-query-param": "Get the query param of name",
     "cms.content_side_view.daikoku-template-wrapper": "Display a wrapper block of the passed id",
-    "cms.content_side_view.daikoku-apis": "Get all apis",
-    "cms.content_side_view.daikoku-api": "Get an specific api",
-    "cms.content_side_view.daikoku-json-apis": "Get all apis as stringified JSON format",
-    "cms.content_side_view.daikoku-json-api": "Get a specific api as stringified JSON format",
+    "cms.content_side_view.daikoku-apis": "Get all APIs",
+    "cms.content_side_view.daikoku-api": "Get an specific API",
+    "cms.content_side_view.daikoku-json-apis": "Get all APIs as stringified JSON format",
+    "cms.content_side_view.daikoku-json-api": "Get a specific API as stringified JSON format",
     "cms.content_side_view.daikoku-teams": "Get all teams",
     "cms.content_side_view.daikoku-team": "Get an specific team",
     "cms.content_side_view.daikoku-json-teams": "Get all teams as stringified JSON format",
     "cms.content_side_view.daikoku-json-team": "Get a specific team as stringified JSON format",
-    "cms.content_side_view.daikoku-documentations": "Get all documentation pages of an api",
-    "cms.content_side_view.daikoku-documentations-page": "Get a specific page of the documentation of an api",
-    "cms.content_side_view.daikoku-documentations-page-id": "Get a specific page of the documentation of an api by id",
-    "cms.content_side_view.daikoku-plans": "Get the plans of an api",
+    "cms.content_side_view.daikoku-documentations": "Get all documentation pages of an API",
+    "cms.content_side_view.daikoku-documentations-page": "Get a specific page of the documentation of an API",
+    "cms.content_side_view.daikoku-documentations-page-id": "Get a specific page of the documentation of an API by id",
+    "cms.content_side_view.daikoku-plans": "Get the plans of an API",
     "cms.content_side_view.search_text": "Search your directive...",
     "cms.index.new_page": "New page",
     "cms.pages.block": "BLOCK",
@@ -1170,15 +1170,15 @@
     "Insert URL": "Insert URL",
     "custom.metadata.process.change.to.manual": "set up subscriptionProcess to manual due to have a customMetadata",
     "subscription security": "subscription security",
-    "subscription.security.help": "if enabled, personnal teams will not be able to subscribed to an API",
+    "subscription.security.help": "if enabled, personal teams will not be able to subscribed to an API",
     "API reference visibility": "API reference visibility",
-    "api.reference.visibility.help": "if enabled, guest user can't see api reference on public api",
+    "api.reference.visibility.help": "if enabled, guest user can't see API reference on public API",
     "Hide teams page": "Hide teams page",
     "hide.teams.page.help": "if enabled, /teams will be inaccessible",
     "General": "General",
     "Customization": "Customization",
     "Mail": "Mail",
-    "alerting.help": "List of emails the will receive daikoku alerts",
+    "alerting.help": "List of emails the will receive Daikoku alerts",
     "poumon": "poumon",
     "user.validated.success": "Your account has been successfully validated. You can now login.",
     "doc.page.update.modal.title": "Update documentation page",
@@ -1241,6 +1241,6 @@
     "set.favicon": "favicon",
     "set.font.family": "font family",
     "select.team.placeholder": "Select a team",
-    "otoroshi.missing.target":"Missing otoroshi target",
-    "otoroshi.missing.entities":"Missing otoroshi entities"
+    "otoroshi.missing.target":"Missing Otoroshi target",
+    "otoroshi.missing.entities":"Missing Otoroshi entities"
 }
