Add some missing translations

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -970,6 +970,12 @@
     "mail.new.message.body": "You've got a new message",
     "mail.new.user.title": "Validate your [tenant] account",
     "mail.new.user.body": "Thanks for creating your [tenant] account, you're almost done.",
+    "mail.create.post.body": "Body of the email following the creation of a post",
+    "mail.create.post.title": "Title of the email following the creation of a post",
+    "mail.new.issue.body": "Body of the email following the creation of a new issue",
+    "mail.new.issue.title": "Title of the email following the creation of a new issue",
+    "mail.api.transfer.ownership.acceptation.body": "Body of the email following the transfer ownership of an API",
+    "mail.api.transfer.ownership.acceptation.title": "Title of the email following the transfer ownership of an API",
     "mailing_internalization.message_text": "Message text",
     "mailing_internalization.required_variables": "Required variables",
     "mailing_internalization.translation_updated": "Translation updated",
