--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -963,6 +963,12 @@
   "mail.new.message.body": "Vous avez un nouveau message",
   "mail.new.user.title": "Validation de votre compte sur le tenant [tenant]",
   "mail.new.user.body": "Merci d'avoir créé un compte sur [tenant], vous y êtes presque.",
+  "mail.create.post.body": "Corps du mail suite à la creation d'une publication",
+  "mail.create.post.title": "sujet du mail suite à la creation d'une publication",
+  "mail.new.issue.body": "Corps du mail suite à la creation d'une issue",
+  "mail.new.issue.title": "sujet du mail suite à la creation d'une issue",
+  "mail.api.transfer.ownership.acceptation.body": "Corps du mail d'invitation au transfert de propriété d'API",
+  "mail.api.transfer.ownership.acceptation.title": "titre du mail d'invitation au transfert de propriété d'API",
   "mailing_internalization.message_text": "Description du message",
   "mailing_internalization.required_variables": "Variables requises",
   "mailing_internalization.translation_updated": "Traduction sauvegardée",
