--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1252,5 +1252,6 @@
     "Payment": "Payment",
     "third-party.payment.list.add.label": "Add new settings",
     "third-party.payment.settings.delete.confirm.message": "Are your sure to delete this settings?",
-    "third-party.payment.settings.type.select.message": "Please, Select the third-party payment settings type"
+    "third-party.payment.settings.type.select.message": "Please, Select the third-party payment settings type",
+    "warning.missing.otoroshi": "No Otoroshi instances configured or no entities configured"
 }
