--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1255,5 +1255,6 @@
   "Payment": "Paiement",
   "third-party.payment.list.add.label": "Ajouter un tiers de paiement",
   "third-party.payment.settings.delete.confirm.message": "Êtes-vous sûr de vouloir supprimer ces paramètres ?",
-  "third-party.payment.settings.type.select.message": "Merci de selectionner un type de tiers de paiement à parametrer"
+  "third-party.payment.settings.type.select.message": "Merci de selectionner un type de tiers de paiement à parametrer",
+  "warning.missing.otoroshi": "Aucune instance Otoroshi configurée ou aucune entité configurée"
 }
