--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1259,5 +1259,9 @@
   "warning.missing.otoroshi": "Aucune instance Otoroshi configurée ou aucune entité configurée",
   "plan.update.successful": "Le plan a été créé avec succès",
   "plan.creation.successful": "Le plan a été mis à jour avec succès",
-  "plan.payment.setup.successful": "Les paramètres de paiement du plan ont été mis à jour avec succès"
+  "plan.payment.setup.successful": "Les paramètres de paiement du plan ont été mis à jour avec succès",
+  "api.created": "Créée",
+  "api.published": "Publiée",
+  "api.deprecated": "Dépréciée",
+  "api.blocked": "Bloquée"
 }
