--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1250,5 +1250,11 @@
     "otoroshi.missing.entities":"Missing Otoroshi entities",
     "otoroshi.missing.target":"Missing otoroshi target",
     "apiList.tag.search":"Search a tag",
-    "apiList.category.search":"Search a category"
+    "apiList.category.search":"Search a category",
+    "team.email.verification.send":"Mail sent to %s for verify this email address.",
+    "team.email.alreadyVerified":"This mail is verified",
+    "team.email.notVerified":"Click here for sending a validation email",
+    "mailValidation.sent.title":"Mail sent",
+    "mailValidation.sent.body":"An mail have been sent for validating this new email address.",
+    "team.validated.success": "Your email have been verified"
 }
